@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-11T02:01:47Z",
-  "count" : 4,
-  "count_minmax" : [ 0, 4 ],
-  "count_prev_day_inc" : 4,
-  "count_prev_day_dec" : 0,
+  "timestamp" : "2022-05-24T08:29:18Z",
+  "count" : 3,
+  "count_minmax" : [ 3, 4 ],
+  "count_decinc" : [ -1, +0 ],
   "uniques" : 2,
-  "uniques_minmax" : [ 0, 2 ],
-  "uniques_prev_day_inc" : 2,
-  "uniques_prev_day_dec" : 0
+  "uniques_minmax" : [ 2, 2 ],
+  "uniques_decinc" : [ -0, +0 ]
 }
